--- a/index.html
+++ b/index.html
@@ -1,21 +1,39 @@
-
 <!DOCTYPE html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TutumSec - Cybersecurity Consulting & Strategy</title>
-    <meta name="description" content="Transformamos la ciberseguridad en ventaja competitiva. Servicios de consultoría en ciberseguridad, auditorías, pentesting y cumplimiento normativo." />
+    <meta
+      name="description"
+      content="Transformamos la ciberseguridad en ventaja competitiva. Servicios de consultoría en ciberseguridad, auditorías, pentesting y cumplimiento normativo."
+    />
     <meta name="author" content="TutumSec" />
-    <link rel="icon" href="/lovable-uploads/f2969aed-62fb-48a0-b0f9-42b1bbf2c67e.png" type="image/png">
+    <link
+      rel="icon"
+      href="/lovable-uploads/f2969aed-62fb-48a0-b0f9-42b1bbf2c67e.png"
+      type="image/png"
+    />
 
-    <meta property="og:title" content="TutumSec - Cybersecurity Consulting & Strategy" />
-    <meta property="og:description" content="Transformamos la ciberseguridad en ventaja competitiva" />
+    <meta
+      property="og:title"
+      content="TutumSec - Cybersecurity Consulting & Strategy"
+    />
+    <meta
+      property="og:description"
+      content="Transformamos la ciberseguridad en ventaja competitiva"
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/lovable-uploads/28486bc8-b0a7-48de-a3dd-49f71e4a3f41.png" />
+    <meta
+      property="og:image"
+      content="/lovable-uploads/28486bc8-b0a7-48de-a3dd-49f71e4a3f41.png"
+    />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="/lovable-uploads/28486bc8-b0a7-48de-a3dd-49f71e4a3f41.png" />
+    <meta
+      name="twitter:image"
+      content="/lovable-uploads/28486bc8-b0a7-48de-a3dd-49f71e4a3f41.png"
+    />
   </head>
 
   <body>
